--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <a href="#">Explore Now</a> 
           </div > 
         <div class="whatwedo">
+             <h1 class="serhead">What We do</h1>
           <div class="cards">  
+            
             <div class="card1">
                 <h1>
                     Marketing 
