--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="blob blob1"></div>
             <div class="blob blob2"></div>
             <div class="blob blob3"></div>
-             <h1 class="serhead"><strong>What We do</strong><br></h1>
+             <h2 class="serhead"><strong>What We do</strong><br></h2>
              <h2 class="serpara">We are a group of dedicated professionals with exceptional expertise in delivering a wide range of high-quality services. With years of experience and a strong commitment to excellence, we take pride in providing reliable, efficient, and customized solutions tailored to meet the specific needs of our clients.</h2>
            
              <div class="cards">  
@@ -47,7 +47,18 @@
                     <p>From UI/UX to graphic design, we design intuitive and eye-catching solutions that enhance user experience and elevate your visual presence.</p>
                 </div>
             </div>
-        </div>  
+        </div> 
+        <div class="page2">
+            <div class="video-container">
+                <video autoplay loop muted src="Assets/Block.mp4"></video>
+            </div>
+            <h1>
+                Ads<br>Marketing<br>Branding<br><p>We Cover Everything.</p>
+            </h1>
+        </div> 
+        <div class="page3">
+
+        </div>
         <script src="index.js"></script>
 </body>
 </html>
